# guess

./: configure.ac
lib/: Makefile.am  guess_common.c  guess_common.h
src/client/: Makefile.am  main.c
src/server/: Makefile.am  main.c
